[gd_scene format=3 uid="uid://dyufnmqf6gyrt"]

[ext_resource type="Script" uid="uid://lgg1sx1olblt" path="res://lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lobby: XXXX"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Waiting for players..."
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Players:"
horizontal_alignment = 1

[node name="PlayersContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Separator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Start Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_pressed"]
